# recruiter-fy2yb7

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: analytics-service.yml  candidate-service.yml  crm-service.yml  gateway-service.yml  requisition-service.yml  web-app.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/: docker-compose.prod.yml  docker-compose.staging.yml
infrastructure/kubernetes/: analytics-service.yaml  candidate-service.yaml  config-maps.yaml  crm-service.yaml  gateway-service.yaml  ingress.yaml  requisition-service.yaml  secrets.yaml  storage-class.yaml  web-app.yaml
infrastructure/scripts/: backup.sh  deploy.sh  logging-setup.sh  monitoring-setup.sh  ssl-setup.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
src/backend/: .dockerignore  .env.example  .eslintrc.ts  .prettierrc  Dockerfile  README.md  docker-compose.yml  jest.config.ts  lerna.json  nodemon.json  package.json  tsconfig.json
src/backend/services/analytics/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/services/analytics/src/config/: database.py  elasticsearch.py
src/backend/services/analytics/src/controllers/: analytics_controller.py  reporting_controller.py
src/backend/services/analytics/src/interfaces/: analytics_types.py
src/backend/services/analytics/src/middleware/: auth_middleware.py
src/backend/services/analytics/src/models/: analytics_model.py
src/backend/services/analytics/src/routes/: analytics_routes.py
src/backend/services/analytics/src/services/: analytics_service.py  etl_service.py
src/backend/services/analytics/src/utils/: data_processing.py
src/backend/services/analytics/tests/integration/: analytics_test.py
src/backend/services/analytics/tests/unit/: analytics_service_test.py
src/web/: .dockerignore  .env.example  .eslintrc.ts  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  (+1 more)
(+232 files in other folders)
